--- a/css/main_container/container_sec3.css
+++ b/css/main_container/container_sec3.css
@@ -56,18 +56,41 @@
     height: 892px;
     position: relative;
 }
-/* .container .inner-container .index .sections .section.sec3 .sec-con .main-con-img{ 
-}*/
-
-.container .inner-container .index .sections .section.sec3 .sec-con .main-con-img img.pc-con-img{
+/* graphic animation */
+.active-colorBox{
+    position: absolute;
     width: 100%;
-    /* padding: 0 158px; */
-    height: auto;
-    display: block;
-    height: auto;
-    z-index: -1;
-}
+    border: 0px solid #00f;
+    top: 0%;
+    height: 600px;
+    /* transform: translateX(-50%);
+    left: 50%; */
 
+}
+.colorBox.graphic1{
+    position: absolute;
+    top: 0;
+    left: -40px;
+    transform: translate(-10%,-40%);
+    width:200px;
+    height:auto;
+    opacity: 0.6;
+}
+.colorBox.graphic1 img{
+    display: block;
+    width: 100%;
+    height:auto;
+}
+.colorBox.red{
+    position: absolute;
+    bottom: 0%;
+    right: 0px;
+    transform: translate(0%,-50%);
+    background: #f00a;
+    width:150px;
+    height:40px;
+    opacity: 0.9;
+}
 .container .inner-container .index .sections .section.sec3 .sec-con .info-boxes{
     /* position: absolute;
     bottom: 0; */
@@ -77,7 +100,6 @@
     width: 100%;
     height: auto;
     z-index: 50;
-
 }
 .container .inner-container .index .sections .section.sec3 .sec-con .info-boxes>ul{
     background: #fff8;
@@ -139,7 +161,7 @@
         padding-top: 60px;
     }
     .container .inner-container .index .sections .section.sec3 .sec-con .info-boxes>ul{
-        background: #fff8;
+        background: #fff0;
         width: 100%;
         display: grid;
         grid-template-columns: repeat(1,auto);
@@ -151,10 +173,11 @@
     }
     .container .inner-container .index .sections .section.sec3 .sec-con .main-con-img{
         width: 100%;
-        max-width: 720px;
+        max-width: 690px;
+        margin:0 65px;
         border: 0px solid #00f;
-        background: url(../../img/sec3_1.png)no-repeat 50% /contain;
-        height: 892px;
+        background: url(../../img/sec3_1.png)no-repeat 50% 20% /contain;
+        height: 792px;
         position: relative;
     }
     .container .inner-container .index .sections .section.sec3 .sec-con .info-boxes>ul>li{
@@ -190,6 +213,12 @@
 }
 
 /* max-width:767 px */
-/* @media only screen and (max-width:767px) {
+@media only screen and (max-width:767px) {
 
-} */
+
+    .container .inner-container .index .sections .section.sec3 .sec-con .main-con-img{
+        width: 100%;
+        max-width: 690px;
+        margin:0 5%;
+    }
+}
