--- a/css/join.css
+++ b/css/join.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 @import url(common/reset.css);
-@import url(header/header-brief.css);
-@import url(footer/footer-brief.css);
+@import url(header/header_brief.css);
+@import url(footer/footer_brief.css);
 
 :root {
     --basic-green-color: #96c11f;
@@ -11,6 +11,13 @@
     --basic-font-color: #212529;
 }
 
+.mobile-hidden{
+    display: block;
+}
+.pc-hidden{
+    display: none;
+}
+/* join container 시작 */
 .container{
     width: 100%;
     height: auto;
@@ -184,7 +191,7 @@
     justify-content: flex-start;
     grid-area: 1 / 1 / 2 / 2;
 }
-.container .inner-container .index .fieldset .joinform .forms .form-title .form-title-circle{
+.container .inner-container .index .fieldset .joinform .forms .form-title span.form-title-circle{
     display:block;
     width: 36px;
     height: 36px;
@@ -192,7 +199,7 @@
     background: var(--basic-green-color);
     border-radius: 50%;
 }
-.container .inner-container .index .fieldset .joinform .forms .form-title h1{
+.container .inner-container .index .fieldset .joinform .forms .form-title h1.form-title-h1{
     font-size: 2.25rem;
     margin-bottom: 15px;
     font-weight: 500;
@@ -242,6 +249,9 @@
     /* margin:15px; */
     height:auto;
 }
+.container .inner-container .index .fieldset .joinform .forms .form-inputs p.notice{
+    padding: 0 0px;
+}
 .form-left-label{
     min-width:20%;
     /* margin-left: 20px; */
@@ -263,8 +273,6 @@
     top:5px;
     right: -8px;
 }
-
-
 .form-right-inputs{
     padding: 0 15px;
     width:60%;
@@ -504,6 +512,7 @@ a#cancleBtn{
 /* terms 시작 */
 .form-inputs.section.sec4>ul.form-inputs{
     padding:0 !important;
+    letter-spacing:-.35px;
 }
 .terms-sub-title{
     width: 100%;
@@ -528,10 +537,9 @@ a#cancleBtn{
 .terms-info.notice input{
     display: block;
     margin: 3px 5px 0 0 !important;
-
 }
 
-.terms-section-box{
+.terms-section-infobox{
     width: 797.5px;
     margin:20px 0;
     padding:30px 25px;
@@ -542,15 +550,26 @@ a#cancleBtn{
     box-sizing: content-box;
     border-radius:0.375rem;
 }
-.terms-section-box>ul{
+.terms-section-infobox>ul{
     font-size:.875rem;
     color: #333333;
     letter-spacing:-.25px;
     line-height:1.875rem;
 }
-.terms-section-box>ul>dl>dt{
+.terms-section-infobox>ul>dl>dt{
     font-weight: 600;
     letter-spacing:.125rem;
+}
+.terms-section-checkbox .agree-radio-box{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+}
+.terms-section-checkbox span.agree-radio-text{
+    font-size: 1rem;
+    display:inline-block;
 }
 .terms-section-checkbox{
     grid-area: 5/ 4 / -1/4;
@@ -574,58 +593,3 @@ h1.terms-section-title{
     border-bottom: 1px solid #e4e4e4;
 }
 
-
- /* meaia query */
-@media only screen and (max-width:991px) {
-    .container .inner-container .index .fieldset .joinform .forms{
-        width:100%;
-        max-width: 1200px;
-        display: grid;
-        grid-template-columns: repeat(4,1fr);
-        grid-template-rows: repeat(7,auto);
-        padding: 0 15px;
-    }
-    .container .inner-container .index .fieldset .joinform .forms .form-title{
-        /* width:27.5%;
-        min-width:300px; */
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        grid-area: 1 / 1 / 2 / -1;
-    }
-    /* .container .inner-container .index .fieldset .joinform .forms .form-title{ */
-    .container .inner-container .index .fieldset .joinform .forms .form-inputs.sections{   
-        grid-area: 2 / 1 / 3 / -1;
-    }
-    .container .inner-container .index .fieldset .joinform .forms .form-inputs>ul{
-        /* width:72.5%;
-        min-width:870px; */
-        /* border-top: solid 1px #aaa; */
-        border-bottom: solid 1px #e4e4e4;
-        padding:60px 0px;
-    }
-    /* .container .inner-container .index .fieldset .joinform .forms .form-inputs.section>ul>li { */
-
-    .container .index .fieldset .joinform .forms .form-inputs.section>ul>li{
-        flex-direction: column;
-        flex-wrap: wrap;
-    }
-    .container .index .fieldset .joinform .forms .form-inputs.section>ul>li .form-left-label{
-        width:100%;
-    }
-    .container .index .fieldset .joinform .forms .form-inputs.section>ul>li .form-right-inputs{
-        width:100%;
-    }
-    .terms-section-checkbox{
-        grid-area: 5/ 4 / -1 /4;
-        display: flex;
-        align-items: center;
-        margin-bottom: 10px;
-    }
-    
-}
-
-/* max-width:767 px */
-/* @media only screen and (max-width:767px) {
-
-} */
