--- a/css/main_container/container_sec2.css
+++ b/css/main_container/container_sec2.css
@@ -32,24 +32,21 @@ br.pc-hidden{
 }
 .container .inner-container .index .sections .section.sec2 .sec-con{
     width: 100%;
-    max-width:1470px;
+    max-width:1920px;
     height: auto;
     border: 0px solid #ccc;
     display: flex;
     flex-direction: column;
     justify-content: center;
     flex-wrap: wrap;
-    /* overflow: hidden; */
     position: relative;
-    margin-top: 20px;
+    margin-top: 20px ;
 }
 .container .inner-container .index .sections .section.sec2 .sec-con .sec2_slide_wrapper{
     width:100%;
-    /* min-width: 1920px; */
     height: 500px;
     border: 0px solid #ccc;
     overflow: hidden;
-    /* background: #000; */
     position: relative;
 }
 .container .inner-container .index .sections .section.sec2 .sec-con .sec2_slide_wrapper ul.slide_items_list{
@@ -78,7 +75,7 @@ br.pc-hidden{
     display: flex;
     flex-direction: column;
     justify-content:flex-start;
-    margin-right: 50px;
+    padding-right: 50px;
     position: relative;
     /* padding:0 10px; */
     /* background: #ccc2; */
@@ -101,18 +98,33 @@ li.slide_item .thumbnail-img img{
     height: auto;
     overflow: hidden;
 }
-/* li.slide_item p{
+
+li.slide_item p{
+    text-align: left;
+    margin:10px 8px;
+    font-size:1.125rem;
 }
 li.slide_item span.info-date{
-} */
-li.slide_item span.more-button{
     display:block;
-    width:80px;
+    text-align: left;
+    color:#555;
+    font-size:0.875rem;
+    letter-spacing:-0.85px;
+    margin:10px 8px;
+}
+li.slide_item span.more-button{
+    color:#555;
+    font-size:0.875rem;
+    letter-spacing:-0.85px;
+    text-transform: uppercase;
+    display:block;
+    width:75px;
     height: auto;
-    border:1px solid #f00;
+    border:0px solid #f00;
     text-align: left;
     position: absolute;
     bottom:0%;
+    transform: translateX(-70%);
     right:0;
     opacity: 0;
     visibility: hidden;
@@ -155,24 +167,38 @@ li.slide_item>a:hover span.more-button{
     top:150px;
     left: 50%;
     transform: translate(-50%, -0%);
+    
 }
 .controls span{
-    background: #aaa;
+    /* background: #aaa; */
     color: #fff;
     padding:10px 20px;
     margin: 0 10px;
+    cursor: pointer;
+    /* position: relative; */
+}
+.controls span::after{
+    content:"";
+    /* position: absolute;
+    left:0px; */
+    width: 50px;
+    height: 50px;
+    background: #fff;
+    border-radius: 50px;
+    margin-top: -20px;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
+    z-index: 2;
 }
 span.prev{
-    cursor: pointer;
+    background-image: url(../../img/arrow-left.png);
+    filter: drop-shadow(0px 0px 5px rgb(145, 145, 145));
     display:block;
-    width: 30px;
-    /* width:100px; */
-    height: 105px;
     border: 0px solid #da1009;
-    text-align: center;
 }
 span.next{
-    border-left: 1px solid#aaa;
+    background-image: url(../../img/arrow-right.png);
+    filter: drop-shadow(0px 0px 5px rgb(145, 145, 145));
+    /* border-left: 1px solid#aaa; */
 }
 
 
@@ -195,23 +221,18 @@ span.next{
     /* br.pc-hidden{
         display: block;
     } */
-    .container .inner-container .index .sections .section.sec2 .sec-con .sec2_slide_wrapper{
+    /* .container .inner-container .index .sections .section.sec2 .sec-con .sec2_slide_wrapper{
         width:100%;
-        /* min-width: 1920px; */
         margin-top: 30px;
         height: 300px;
     }
     .container .inner-container .index .sections .section.sec2 .sec-con .sec2_slide_wrapper ul.slide_items_list li.slide_item{
         width: 230px;
-    /* width: 460px; */
     }
-    /* .container .inner-container .index .sections .section.sec2 .sec-con .sec2_slide_wrapper ul.slide_items_list li.slide_item:last-child{
-        margin-left: 50px;
-    } */
 
     li.slide_item .thumbnail-img{
         width: 230px;
         height: 150px;
         overflow: hidden;
-    }
+    } */
 }
