--- a/css/main_container/container_sec4.css
+++ b/css/main_container/container_sec4.css
@@ -32,9 +32,13 @@ br.pc-hidden{
 .section.sec4 .sec-con .sec4-slide{
     display: flex;
     position: relative;  
+    max-width:1920px;
     width: 100%; 
     height: 644px;
     border: 0px solid #ccc;
+    /* overflow: hidden; */
+    z-index: 10;
+
 
 }
 .section.sec4 .sec-con .sec4-slide::after{
@@ -48,56 +52,43 @@ br.pc-hidden{
     top: 0;
     left: 50%;
     transform: translateX(-50%);   
-    z-index: 10;
+    z-index: -10;
 }
 .section.sec4 .sec-con .sec4-slide .slider {
     position: absolute;
     top: 50%;
-    left: -2%;
-    transform: translateY(-50%);
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: auto;
-    /* width: 400px; */
+    max-width: 1920px;
     height: 644px;
-    /* box-shadow: 3px 3px 10px rgba(0, 0, 0, .2); */
-    /* display:flex;
-    justify-content: center; */
-    overflow: hidden;
+    /* box-shadow: 3px 3px 10px rgba(0,0,0,.2); */
 }
 
 .section.sec4 .sec-con .sec4-slide .slider .wrapper {
-    overflow: hidden;
+    /* overflow: hidden; */
     position: relative;
     width:100%;
-    max-width: 1920px;
+    max-width: 960px;
     height: 644px;
     border: 0px solid #00f;
-    /* background: #b9e1f5; */
-    z-index: 1;
-    left: 50%;
-    top:0%;
-    transform: translatex(-50%); 
+    overflow-x: hidden;
+    position: relative;
 }
 
 .section.sec4 .sec-con .sec4-slide .slider .wrapper .slides {
     display: flex;
     position: relative;
-    /* position: absolute; */
-    border: 0px solid #0ff;
     top: 0;
-    /* width: 100%; */
-    width: 100%;
-
-    height:644px;
-    /* left: -320px; */
-    z-index: 100;
-    left: 50%;
-    transform: translateX(-50%);   
-    /* display: none; */
+    left:-800px;
+    width: 3,840px;
+    /* height:644px; */
 
 }
 
 .slides.shifting {
     transition: left .2s ease-out;
+    left:-160px;
 }
 
 .section.sec4 .sec-con .sec4-slide .slider .wrapper .slides .slide {
@@ -114,16 +105,56 @@ br.pc-hidden{
     border: 0px solid #f0f;
     position: relative;
     /* background: #FFCF47; */
-    background: #fff;
     border-radius: 2px;
     left: 50%;
     /* transform: translateX(-50%);    */
 }
 .section.sec4 .sec-con .sec4-slide .slider .wrapper .slides .slide .thumbnail-img{
-
     width: 260px;
     height:260px;
     border: 0px solid #f00;
+    position: relative;
+}
+.section.sec4 .sec-con .sec4-slide .slider .wrapper .slides .slide .thumbnail-img::after{
+content: '';
+background:  url(../../img/instagram.svg) no-repeat 50% /cover;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+width:40px;
+height: 40px;
+opacity: 0.93;
+}
+.section.sec4 .sec-con .sec4-slide .slider .wrapper .slides .slide:nth-child(9) .thumbnail-img::after{
+background:  url(../../img/blog.png) no-repeat 50% /cover;
+}
+.section.sec4 .sec-con .sec4-slide .slider .wrapper .slides .slide:nth-child(3) .thumbnail-img::after{
+background:  url(../../img/facebook.svg) no-repeat 50% /cover;
+}
+.section.sec4 .sec-con .sec4-slide .slider .wrapper .slides .slide:nth-child(4) .thumbnail-img::after{
+background:  url(../../img/blog.png) no-repeat 50% /cover;
+}
+
+.slide h2{
+    font-size:1.25rem;
+    padding:10px 0;
+    text-decoration: underline;
+}
+.slide p{
+    font-size:0.875rem;
+    padding:10px 0;
+    color: #333;
+    margin-bottom: 30px;
+    text-overflow: ellipsis;
+}
+.slide span{
+    display:block;
+    text-align: left;
+    color:#ccc;
+    font-size:0.875rem;
+    letter-spacing:-0.85px;
+    font-family: 'Red Hat Display', sans-serif !important;
 }
 .control {
     position: absolute;
@@ -137,31 +168,8 @@ br.pc-hidden{
     z-index: 2;
 }
 
-.prev,
-.next {
-    background-size: 22px;
-    background-position: center;
-    background-repeat: no-repeat;
-    cursor: pointer;
-}
-
-.prev {
-    background-image: url(https://cdn0.iconfinder.com/data/icons/navigation-set-arrows-part-one/32/ChevronLeft-512.png);
-    left: 20px;
-}
-
-.next {
-    background-image: url(https://cdn0.iconfinder.com/data/icons/navigation-set-arrows-part-one/32/ChevronRight-512.png);
-    right: 20px;
-}
-
-.prev:active,
-.next:active {
-    transform: scale(.8);
-}
-
 .section.sec4 .con-button{
-    margin: 105px 0px 80px;
+    margin: 95px 0px 80px;
 }
 
 
@@ -172,7 +180,7 @@ br.pc-hidden{
     br.pc-hidden{
         display: block;
     }
-    .section.sec4 .sec-con .sec4-slide::after{
+    /* .section.sec4 .sec-con .sec4-slide::after{
         content :'';
         background : url(../../img/sec2_frame.png) no-repeat 50% /cover;
         width:185px;
@@ -183,7 +191,7 @@ br.pc-hidden{
         left: 50%;
         transform: translateX(-50%);   
         z-index: 10;
-    }
+    } */
     
 }
 
