--- a/css/main_container/container_sec8.css
+++ b/css/main_container/container_sec8.css
@@ -42,12 +42,34 @@
     justify-content:center;
     align-items: center;
 }
+.container .inner-container .index .sections .section.sec8 .sec-con>ul>li:nth-child(1){
+    align-items: flex-start;
+    justify-content:  center;
+}
+.container .inner-container .index .sections .section.sec8 .sec-con>ul>li:nth-child(1) a{
+    text-align:left !important;
+}
+
+.container .inner-container .index .sections .section.sec8 .sec-con>ul>li:nth-child(1) p{
+    font-size: 1.125rem;
+}
+.container .inner-container .index .sections .section.sec8 .sec-con>ul>li:nth-child(1) h2{
+    color: #fff;
+    font-size: 3rem;
+    font-family: 'Red Hat Display', sans-serif !important;
+    margin-bottom: 35px;
+}
+.container .inner-container .index .sections .section.sec8 .sec-con>ul>li:nth-child(1) span{
+    margin-right: 25px;
+}
+
 .container .inner-container .index .sections .section.sec8 .sec-con>ul>li a{
     color:#aaa;
     display: block;
     text-align: center;
     word-wrap: keep-all;
 }
+
 /* .container .inner-container .index .sections .section.sec8 .sec-con>ul>li:nth-child(3){
     width: 33.3333%;
     border-right: 0px solid #fff;
@@ -56,7 +78,7 @@
     border-left:1px solid rgba(124, 124, 124, 0.9);
     border-right:1px solid rgba(124, 124, 124, 0.9);
 }
-.container .inner-container .index .sections .section.sec8 .sec-con>ul>li p{
+.container .inner-container .index .sections .section.sec8 .sec-con>ul>li p.title{
     font-family: 'Red Hat Display', sans-serif !important;
     color: #fff;
     font-weight: 600;
@@ -104,12 +126,8 @@
     .container .inner-container .index .sections .section.sec8 .sec-con>ul>li{
         width: 100%;
         height:125px;
-        display:flex;
-        justify-content:space-between;
-        flex-wrap: nowrap;
-        flex-direction: row;
-        align-items: center;
         padding-bottom: 0;
+        flex-wrap: wrap;
     }
     .container .inner-container .index .sections .section.sec8 .sec-con>ul>li:nth-child(2){
         border-left:0px solid rgba(124, 124, 124, 0.9);
@@ -124,15 +142,46 @@
         text-align: left;
         word-wrap: keep-all;
         align-items: left;    
+        display:flex;
+        justify-content: flex-start;
+        /* flex-wrap: wrap; */
+        flex-direction: row;
+        align-items: center;
     }
-    .container .inner-container .index .sections .section.sec8 .sec-con>ul>li .icon{
-        width:0%;
+    .container .inner-container .index .sections .section.sec8 .sec-con>ul>li:nth-child(1) a{
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
     }
+    .container .inner-container .index .sections .section.sec8 .sec-con>ul>li:nth-child(1) p{
+        font-size: 0.875rem;
+    }
+    .container .inner-container .index .sections .section.sec8 .sec-con>ul>li:nth-child(1) h2{
+        color: #fff;
+        font-size: 1.5rem;
+        font-family: 'Red Hat Display', sans-serif !important;
+        margin-bottom: 5px;
+    }
+    .container .inner-container .index .sections .section.sec8 .sec-con>ul>li:nth-child(1) span{
+        font-size: 0.875rem;
+        margin-right: 25px;
+    }
+    .container .inner-container .index .sections .section.sec8 .sec-con>ul>li:nth-child(1) h2{
+        color: #fff;
+        font-size: 1.875rem;
+        font-family: 'Red Hat Display', sans-serif !important;
+        margin-bottom: 5px;
+    }
+    .container .inner-container .index .sections .section.sec8 .sec-con>ul>li:nth-child(1) span{
+        font-size: 0.75rem;
+        margin-right: 25px;
+    }
+
     .container .inner-container .index .sections .section.sec8 .sec-con>ul>li .con-txt{
         display:flex;
         flex-direction: column;
         justify-content:center;
-        margin-left: 20px;
+        margin-left: 40px;
     }
     .container .inner-container .index .sections .section.sec8 .sec-con>ul>li .con-txt span{
         display: inline-block;
@@ -141,10 +190,10 @@
     .container .inner-container .index .sections .section.sec8 .sec-con>ul>li .icon{
         width: auto;
         height:25px;
-        margin:0 auto;
-        position: relative;
+        margin:0px 0;
         display:flex;
-        justify-content: center;
+        justify-content: flex-start;
+        position: relative;
     }
     .container .inner-container .index .sections .section.sec8 .sec-con>ul>li .icon img{
         display: block;
