--- a/css/footer/footer.css
+++ b/css/footer/footer.css
@@ -16,7 +16,9 @@
 
 
 /* footer 시작 */
-
+.footer{
+    overflow-x: hidden;
+}
 
 .footer .inner-footer{
     width: 100%;
@@ -185,9 +187,6 @@ ul.title{
 
 @media only screen and (max-width:991px) {
         .footer .inner-footer .footer-con{
-            width: 100%;
-            max-width: 1200px;
-            height: auto;
             border: 0px solid;
             display: grid;
             grid-template-columns: repeat(4,1fr);
@@ -200,8 +199,10 @@ ul.title{
             justify-content: flex-start;
             padding-bottom: 24.5px;
         }
-        .footer .inner-footer .footer-con .family-sites button{
-            width:100%;
+        .footer .inner-footer .footer-con .family-sites .siteBtn{
+            display: block;
+            /* width:100%; */
+            min-width: 768px;
             min-height: 28px;
             color:#333d;
         }
@@ -299,6 +300,11 @@ ul.title{
         display: flex;
         justify-content: flex-start;
         padding-right: 0%;
+    }
+    .footer .inner-footer .footer-con .family-sites .siteBtn{
+        display: block;
+        /* width:100%; */
+        min-width: 320px;
     }
     .footer .inner-footer .footer-con .footer-links{
         grid-area: 2 / 1 / 3 / -1;
